--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "fsm-editor",
-  "version": "0.2.2",
+  "version": "0.3.0",
   "private": true,
   "dependencies": {
     "@crinkle/feo": "^1.3.2",
-    "@crinkle/fsm": "^0.2.1",
+    "@crinkle/fsm": "^0.3.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "downloadjs": "^1.4.7",
+    "html-to-image": "^1.6.2",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
