--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "fsm-editor",
-  "version": "0.4.2",
+  "version": "0.4.3",
   "private": true,
   "dependencies": {
     "@crinkle/feo": "^1.3.2",
     "@crinkle/fsm": "^0.4.0",
+    "@crinkle/pubbel": "^2.0.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
