--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "fsm-editor",
-  "version": "0.5.5",
+  "version": "0.6.0",
   "private": true,
   "dependencies": {
+    "@crinkles/digl": "^0.1.0",
     "@crinkles/feo": "^1.4.1",
     "@crinkles/fsm": "^0.4.0",
     "@crinkles/pubbel": "^2.0.1",
