--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "fsm-editor",
-  "version": "0.8.6",
+  "version": "0.9.0",
   "private": true,
   "dependencies": {
     "@crinkles/digl": "^0.2.4",
-    "@crinkles/feo": "^1.9.0",
+    "@crinkles/feo": "^2.1.2",
     "@crinkles/fsm": "^0.6.0",
     "@crinkles/pubbel": "^2.0.1",
     "@testing-library/jest-dom": "^5.11.4",
@@ -12,7 +12,6 @@
     "@testing-library/user-event": "^12.1.10",
     "downloadjs": "^1.4.7",
     "html-to-image": "^1.6.2",
-    "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-flow-renderer": "^9.5.4",
@@ -28,7 +27,8 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-unused-imports": "^1.1.1",
     "postcss-custom-properties": "^10.0.0",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "sass": "^1.35.2"
   },
   "scripts": {
     "start": "react-scripts start",
